# Clinical-AI-Safety-Monitor

./: CASM.ipynb  Dockerfile  README.md  biobert_test.ipynb  main.py  pyproject.toml  requirements  test.ipynb
classifiers/: nli_classifier.py
clients/: chroma_store.py  openfda_client.py  pubmed_fetcher.py
experiments/: CASM.ipynb  test.ipynb
models/: claim.py  evidence.py
pipeline/: claim_extractor.py  knowledge_verifier.py
utils/: aggregation.py  constants.py
