[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.11",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.1",
    "spacy>=3.8.11",
    "uvicorn>=0.41.0",
]
