[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "numpy==1.26",
    "sentence-transformers==5.4.1",
    "setuptools>=82.0.1",
    "spacy==3.7.4",
    "spacy-transformers>=1.3.9",
    "transformers>=4.49.0",
    "uvicorn>=0.41.0",
]
